--- a/src/Masny.TimeTracker.Web/Masny.TimeTracker.Web.csproj
+++ b/src/Masny.TimeTracker.Web/Masny.TimeTracker.Web.csproj
@@ -6,7 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Masny.TimeTracker.WebApp.Shared\Masny.TimeTracker.WebApp.Shared.csproj" />
   </ItemGroup>
 
 </Project>
