--- a/src/Masny.TimeTracker.Web/Masny.TimeTracker.Web.csproj
+++ b/src/Masny.TimeTracker.Web/Masny.TimeTracker.Web.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\Masny.TimeTracker.WebApp.Shared\Masny.TimeTracker.WebApp.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
