feat: add roles and localization

--- a/src/Masny.TimeTracker.Web/Masny.TimeTracker.Web.csproj
+++ b/src/Masny.TimeTracker.Web/Masny.TimeTracker.Web.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Masny.TimeTracker.Common\Masny.TimeTracker.Common.csproj" />
     <ProjectReference Include="..\Masny.TimeTracker.WebApp.Shared\Masny.TimeTracker.WebApp.Shared.csproj" />
   </ItemGroup>
 
